[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = "1.14.0"
tokio-tungstenite = "0.16.0"
