[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
futures = "0.3.18"
minifb = "0.20.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tokio-tungstenite = "0.16.0"
url = "2.2.2"

