[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
futures = "0.3.18"
futures-util = "0.3.21"
minifb = "0.20.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"
log = "0.4.16"
env_logger = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-appender = "0.2.2"